--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "@vueuse/head": "^2.0.0",
+    "firebase": "^11.2.0",
     "lightgallery": "^2.7.2",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
